src-styles/pages/_single-space.sass
// Page: Single Space

body.single-space
	div.featured-img
		display: inline-block
		width: 540px
		margin-right: $gap-size-20
		img
			width: 100%
	div.amenities-box
		display: inline-block
		width: 260px
		font-family: $font-styled
		&:first-child
			width: 540px
		.card
			padding-bottom: 0
		span.amenity
			display: inline-block
			width: 70px
			margin-bottom: $gap-size-20
			text-align: center
			img.i
				height: 32px
			span
				display: block
				margin-top: 8px
				font-size: 0.8em
	#row-2
		width: 540px
		.card
			margin-bottom: $gap-size-20

	@media screen and (max-width: $container-width + 32)
		#row-1
			flex-direction: column
		#row-2
			width: 100%
		div.featured-img
			width: 100%
			margin-right: 0
			margin-bottom: $gap-size-20
		div.amenities-box
			width: 100% !important
			text-align: center

